tests/core/invalid/function-field/input.core
(core 0
  (types
    (enum example::Bad
      (ctor example::Bad::Bad (field callback (fn Int Int)))))
  (defs))
